--- a/AndBible/res/values-es/strings.xml
+++ b/AndBible/res/values-es/strings.xml
@@ -2,7 +2,10 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="version_text">Version %s</string>
+  <string name="splash_top_text">\n«Dijo Dios: \"Haya luz\", y hubo luz.»\nGénesis 1,3</string>
+  <string name="help_text">Pulse el botón de MENÚ para acciones\n\nVaya al capítulo siguiente o anterior usando la track-ball, el D-pad o desplazando la pantalla con su dedo</string>
+  <string name="help_text_long"><b>Navegación</b>\nVaya al capítulo siguiente o anterior usando la track-ball, el D-pad o desplazando la pantalla con su dedo\n    \nDoble toque alterna Pantalla completa sí/no.\n    \n\n<b>Menú</b>\n    \nPulse el botón MENÚ para acciones\n    \n\nPara descargar más documentos pulse Menú/Más/Descargar Documento\n    \n\n<b>Lectura con voz</b>\nPulse Con voz para acceder a un diálogo para empezar o parar la lectura\n    \n\n<b>Mi Nota</b>\nSe pueden agregar notas a través del elemento de menú Mi Nota en el menú contextual del versículo. La lista de las notas existentes es accesible desde el menú principal.\n    \n\n<b>Marcadores</b>\nSe pueden agregar Marcadores a través del menú contextual del versículo. El gestor de marcadores es accesible desde el menú principal. El menú contextual del gestor de marcadores permite agrupar los marcadores usando etiquetas.\n    \n\n<b>Búsqueda</b>\nLa búsqueda de texto puede incluir caracteres especiales como *, ?, AND, OR, NOT (vea \"Apache Lucene - Query Parser Syntax\" para más detalles)\n    \n\n<b>Menús contextuales</b>\n    \nPresione y mantenga pulsado en la vista de Biblia para abrir el menú contextual para acciones que afecten al versículo actual.\n\nPresione y mantenga en un documento en el selector de documentos para borrarlo o ver su información.\n    \nPresiona y mantenga el botón Atrás para acceder al historial.\n    </string>
+  <string name="version_text">Versión %s</string>
   <string name="no_sdcard_error">Por favor inserte una tarjeta SD e inicie And Bible nuevamente.</string>
   <!--main menu-->
   <string name="chooseBook">Documento</string>
@@ -10,7 +13,7 @@
   <string name="search">Encuentra</string>
   <string name="settings">Ajustes</string>
   <string name="history">Historia</string>
-  <string name="speak">Habla</string>
+  <string name="speak">Con voz</string>
   <string name="help">Ayuda</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Elige Libro</string>
@@ -18,6 +21,7 @@
   <string name="choosePassageVerseName">Elige Verso</string>
   <!--Search-->
   <string name="search_index">Indice de búsqueda</string>
+  <string name="index_creation_required">Se requiere un índice para buscar.\n\nLos índices se pueden descargar de internet o crearse localmente.\n\nDescargarlos es mucho más rápido y los índices descargados tienen más características de búsqueda.\n\nSe necesita una conexión a internet para descargar índices.\n</string>
   <string name="indexing_wait_msg">Cuando la indexación se haya completado, se redireccionará a la pantalla de búsqueda.</string>
   <string name="index">Indice</string>
   <string name="index_download">Descarga</string>
@@ -25,6 +29,7 @@
   <string name="index_create">Crear</string>
   <!--Tasks-->
   <string name="progress_status">Progreso</string>
+  <string name="task_kill_warning">Estas tareas de larga duración pueden interrumpirse si cambia a otra aplicación antes de que terminen.</string>
   <string name="no_tasks_running">Actualmente no hay tareas siendo ejecutadas.</string>
   <!--Search-->
   <string name="search_results">Encuentra Resultados</string>
@@ -45,47 +50,111 @@
   <string name="prefs_show_verseno_summary">Mostrar numers de verso</string>
   <string name="prefs_verse_per_line_title">Un verso por linea</string>
   <string name="prefs_verse_per_line_summary">Muestra cada verso en una linea diferente</string>
+  <string name="prefs_show_bookmarks_title">Mostrar iconos de marcadores</string>
+  <string name="prefs_show_bookmarks_summary">Mostrar icono en los versículos marcados</string>
+  <string name="prefs_show_mynotes_title">Mostrar iconos de Mis Notas</string>
+  <string name="prefs_show_mynotes_summary">Mostrar icono en versículos con Mi Nota</string>
+  <string name="prefs_show_notes_title">Pies de página y x-refs</string>
+  <string name="prefs_show_notes_summary">Mostrar pies de página y referencias cruzadas</string>
+  <string name="prefs_show_strongs_title">Mostrar números de Strong</string>
+  <string name="prefs_show_strongs_summary">Enlaces a definiciones de Griego &amp; Hebreo</string>
+  <string name="prefs_show_morphology_title">Códigos morfológicos</string>
+  <string name="prefs_show_morphology_summary">Mostrar morfología griega de Robinson</string>
   <string name="prefs_section_title_title">Títulos de sección</string>
   <string name="prefs_section_title_summary">Muestra los títulos de sección no canónicos.</string>
+  <string name="prefs_red_letter_title">Letra roja</string>
   <string name="prefs_red_letter_summary">Muestra las palabras de Cristo en rojo</string>
+  <string name="prefs_tilt_to_scroll_title">Inclinar para desplazar</string>
+  <string name="prefs_tilt_to_scroll_summary">Incline el dispositivo para avanzar página abajo</string>
+  <string name="prefs_night_mode_title">Modo nocturno</string>
+  <string name="prefs_night_mode_summary">Para facilitar la lectura en la oscuridad</string>
+  <string name="prefs_night_mode_automatic">Automático</string>
+  <string name="prefs_navigate_to_verse_title">Navegar al versículo</string>
+  <string name="prefs_navigate_to_verse_summary">Escoger versículo (y capítulo) al seleccionar un pasaje</string>
+  <string name="prefs_text_size_title">Tamaño del texto</string>
+  <string name="prefs_text_size_summary">Ver más o más claramente</string>
+  <string name="prefs_text_size_sample_text">Texto de ejemplo</string>
+  <string name="prefs_screen_timeout_title">Dormir</string>
+  <string name="prefs_screen_timeout_summary">Tiempo de inactividad antes de apagar la pantalla</string>
+  <string name="x_minutes">%d minutos</string>
   <string name="prefs_interface_locale_title">Idioma de la aplicación</string>
   <string name="prefs_interface_locale_summary">Selecciona lenguaje de interfaz personalizado</string>
   <string name="locale_change_warning">La aplicación será reiniciada para cambiar al nuevo lenguaje de interfaz</string>
+  <string name="prefs_split_screen_title">Dividir pantalla</string>
+  <string name="prefs_split_screen_summary">Dividir &amp; enlazar</string>
+  <string name="prefs_split_screen_single">Pantalla única</string>
+  <string name="prefs_split_screen_linked">Enlazado</string>
+  <string name="prefs_split_screen_not_linked">No enlazado</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">No existen notas en este capítulo</string>
   <string name="no_verse_notes">No existen notas en este verso</string>
   <string name="previous">Anterior</string>
   <string name="next">Siguiente</string>
   <!--Strongs-->
+  <string name="strongs">Diccionario de Strong</string>
+  <string name="strongs_not_installed">Por favor descargue los diccionarios de griego y hebreo de Strong</string>
   <string name="all_greek_occurrences">Encuentra todas las coincidencias</string>
   <string name="all_hebrew_occurrences">Encuentra todas las coincidencias</string>
+  <string name="no_indexed_bible_with_strongs_ref">Debe descargar una Biblia que contenga números de Strong y descargar su índice por medio de Buscar</string>
+  <string name="morph_robinson_not_installed">Por favor descargue el diccionario \'Códigos de análisis morfológicos de Robinson\'</string>
   <string name="strongs_toggle_button_on">nnnn</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <!--Module download-->
   <string name="download">Descarga Documentos</string>
   <string name="download_confirmation">¿Descargar una Biblia de internet?</string>
+  <string name="download_source_message">Los documentos se descargan de\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Descarga</string>
   <string name="download_refreshing_book_list">Refrescando lista de documentos disponibles.</string>
   <string name="download_refresh_book_list_menu_item">Refresca</string>
+  <string name="error_downloading">Ocurrió un error en la descarga. Por favor compruebe su conexión a internet.</string>
+  <string name="no_internet_connection">No se ha podido conectar a internet</string>
+  <string name="storage_space_warning">No hay suficiente espacio local de almacenamiento.</string>
+  <string name="wait_for_bible">Por favor espere a que la Biblia se termine de descargar. Entonces volverá a la pantalla principal.⏎\n⏎\nDescargue más documentos más tarde navegando desde el botón de Menú/Más/Descargar documentos.</string>
+  <string name="wait_for_bible_not_yet">Por favor, espere. Aún no se ha completado la instalación de la biblia.</string>
+  <string name="download_complete_no_bibles">No hay biblia instalada. Por favor pulse Atrás e inténtelo de nuevo.</string>
   <string name="too_many_jobs">Demasiadas tareas en ejecución.  Por favor espere que algunas terminen e intente nuevamente.</string>
   <string name="document_not_installed">Por favor descarga \'%s\'</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Plan de lectura</string>
   <string name="rdg_plan_selector_title">Elige plan de lectura</string>
   <string name="rdg_plan_day">Día %s</string>
+  <string name="rdg_plan_set_start_jan1">Empezar 1 de Ene</string>
   <string name="done">Hecho</string>
   <string name="reset">Resetea</string>
+  <string name="rdg_plan_y1ntpspr">Nuevo Testamento, Salmos y Proverbios en un año</string>
+  <string name="rdg_plan_y1ot1nt1_chronological">A través de la Biblia cronológicamente en un año</string>
+  <string name="rdg_plan_y1ot1nt1_OTandNT">A través de la biblia en un año - AT y NT</string>
+  <string name="rdg_plan_y1ot1nt1_OTthenNT">A través de la biblia en un año - AT y luego NT</string>
+  <string name="rdg_plan_y1ot1nt2_mcheyne">A través de la biblia en un año (M\'Cheyne)</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Borrar</string>
   <string name="delete_index">Borrar indice de búsqueda</string>
+  <string name="about">Acerca de</string>
   <string name="delete_doc">¿Borrar %s?</string>
+  <string name="delete_search_index_doc">¿Borrar índice de %s?</string>
   <!--Verse context menu-->
+  <string name="select_text">Seleccionar texto</string>
+  <string name="select_text_help">Arrastre despacio para seleccionar.\nEntoces toque la selección para copiar.</string>
+  <string name="notes">Pies de página y referencias</string>
+  <string name="copy">Copiar versículo actual</string>
+  <string name="share_verse">Compartir versículo actual...</string>
+  <string name="share_verse_subject">Un versículo de Biblia ha sido compartido contigo usando And Bible</string>
   <string name="compare_translations">Compara traducciones</string>
   <!--Bookmarks-->
+  <string name="bookmarks">Marcadores</string>
+  <string name="add_bookmark">Añadir marcador</string>
+  <string name="bookmark_added">Marcador añadido</string>
+  <string name="bookmark_exists">Ya existe el marcador</string>
+  <string name="bookmark_labels">Etiquetas de marcador</string>
+  <string name="assign_labels">Asignar etiquetas</string>
+  <string name="new_label">Nueva etiqueta</string>
   <string name="new_label_prompt">Nombre</string>
+  <string name="label_unlabelled">Sin etiquetar</string>
   <!--Dictionary-->
   <string name="dictionary">Diccionario</string>
+  <string name="search_dictionary_hint">Buscar diccionario</string>
+  <string name="dictionary_contents">Contenidos</string>
   <!--General Book-->
   <string name="general_book">Libro</string>
   <string name="general_book_contents">Contenidos</string>
@@ -100,16 +169,28 @@
   <string name="some_verses">%d versos</string>
   <string name="rest_of_chapter">Al fin del capítulo</string>
   <!--Speak - Dictionary and other-->
+  <string name="one_page">%d página</string>
+  <string name="some_pages">%d páginas</string>
   <!--Speak - Common-->
+  <string name="stop">Parar</string>
   <string name="pause">Pausa</string>
   <string name="rewind">Rebobina</string>
   <string name="forward">Adelanta</string>
+  <string name="tts_lang_not_available">No está disponible el idioma.</string>
+  <string name="speak_queue">Cola</string>
+  <string name="speak_repeat">Repetir</string>
   <!--User Notes-->
   <string name="mynotes">Mis Notas</string>
   <string name="mynote">Mi Nota</string>
   <string name="mynote_add">Agrega Mi Nota</string>
   <string name="mynote_view_edit">Mi Nota</string>
+  <string name="mynote_saved">Nota guardada</string>
   <!--Backup and restore-->
+  <string name="backup">Copia de seguridad</string>
+  <string name="backup_success">Se han guardado Mis Notas y Marcadores en %s en la tarjeta SD</string>
+  <string name="restore">Resturar</string>
+  <string name="restore_confirmation">¿Sobreescribir Mis Notas y Marcadores?</string>
+  <string name="restore_success">Se han restaurado Mis Notas y Marcadores desde %s en la tarjeta SD</string>
   <!--Document types-->
   <string name="doc_type_bible">Biblia</string>
   <string name="doc_type_commentary">Comentario</string>
@@ -117,6 +198,7 @@
   <string name="doc_type_book">Libro</string>
   <string name="doc_type_map">Mapa</string>
   <!--Languages-->
+  <string name="lang_default">Predeterminado</string>
   <!--General-->
   <string name="okay">OK</string>
   <string name="cancel">Cancelar</string>
@@ -128,6 +210,7 @@
   <string name="retry">Intenta nuevamente</string>
   <string name="please_wait">Por favor espere...</string>
   <string name="all">Todo</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">A ocurrido un error.</string>
   <string name="error_no_content">No hay contenido para el verso seleccionado</string>
